--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,3 +3,5 @@
 <router-outlet></router-outlet>
 
 <router-outlet name="modal"></router-outlet>
+
+<app-loading-spinner *ngIf="loading$ | async"></app-loading-spinner>
