feat: add auth service and implement auth forms logic

--- a/src/app/features/user/login/login.component.html
+++ b/src/app/features/user/login/login.component.html
@@ -1,3 +1,6 @@
+<app-alert *ngIf="alert$ | async; let alert" [color]="alert.color">
+  {{ alert.msg }}
+</app-alert>
 <!-- Login Form -->
 <form #loginForm="ngForm" (ngSubmit)="login()">
   <!-- Email -->
@@ -42,7 +45,7 @@
   <button
     type="submit"
     class="block w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500 disabled:opacity-50 disabled:bg-indigo-400"
-    [disabled]="loginForm.invalid"
+    [disabled]="loginForm.invalid || (processing$ | async)"
   >
     Submit
   </button>
