--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -11,7 +11,12 @@
       <!-- Primary Navigation -->
       <ul class="flex flex-row mt-1">
         <!-- Navigation Links -->
-        <li>
+        <li
+          *ngIf="
+            (authService.isAuthenticated$ | async) === false;
+            else authenticatedLinks
+          "
+        >
           <a
             [routerLink]="[{ outlets: { modal: ['user'] } }]"
             class="px-2"
@@ -19,12 +24,17 @@
             >Login / Register</a
           >
         </li>
-        <li>
-          <a class="px-2" href="#">Manage</a>
-        </li>
-        <li>
-          <a class="px-2" href="#">Upload</a>
-        </li>
+        <ng-template #authenticatedLinks>
+          <li>
+            <a class="px-2" href="#">Manage</a>
+          </li>
+          <li>
+            <a class="px-2" href="#">Upload</a>
+          </li>
+          <li>
+            <a class="px-2" href="#" (click)="logout($event)">Logout</a>
+          </li>
+        </ng-template>
         <li>
           <a class="px-2" href="about.html">About</a>
         </li>
