--- a/src/app/features/user/register/register.component.html
+++ b/src/app/features/user/register/register.component.html
@@ -1,6 +1,8 @@
-<app-alert *ngIf="alert.show" [color]="alert.color">
-  {{ alert.msg }}
-</app-alert>
+<ng-container *ngIf="alert$ | async; let alert">
+  <app-alert *ngIf="alert.show" [color]="alert.color">
+    {{ alert.msg }}
+  </app-alert>
+</ng-container>
 
 <!-- Registration Form -->
 <form [formGroup]="registerForm" (ngSubmit)="onFormSubmit()">
@@ -59,7 +61,7 @@
   <button
     type="submit"
     class="block disabled:opacity-50 disabled:bg-indigo-400 w-full bg-indigo-400 text-white py-1.5 px-3 rounded transition hover:bg-indigo-500"
-    [disabled]="registerForm.invalid"
+    [disabled]="registerForm.invalid || (processing$ | async)"
   >
     Submit
   </button>
