--- a/src/app/features/user/register/register.component.html
+++ b/src/app/features/user/register/register.component.html
@@ -41,12 +41,11 @@
   <!-- Confirm Password -->
   <div class="mb-3">
     <label class="inline-block mb-2">Confirm Password</label>
-    <input
-      [formControlName]="registerFormFields.confirmedPassword"
+    <app-input
       type="password"
-      class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-      placeholder="Confirm Password"
-    />
+      [control]="confirmedPassword"
+      placeHolder="Confirm Password"
+    ></app-input>
   </div>
   <!-- Phone Number -->
   <div class="mb-3">
