feat: initial implementation for upload form, add video drop

--- a/src/app/nav/nav.component.html
+++ b/src/app/nav/nav.component.html
@@ -29,7 +29,9 @@
             >
           </li>
           <li routerLinkActive="text-indigo-400">
-            <a href="javascript:void(0);" class="px-2">Upload</a>
+            <a routerLink="video/upload" href="javascript:void(0);" class="px-2"
+              >Upload</a
+            >
           </li>
           <li routerLinkActive="text-indigo-400">
             <a href="javascript:void(0);" class="px-2" (click)="logout($event)"
