--- a/src/app/features/video/upload/upload.component.html
+++ b/src/app/features/video/upload/upload.component.html
@@ -4,15 +4,26 @@
 
     <!-- Upload Dropbox -->
     <div
+      *ngIf="!formEnabled; else uploadFormTpl"
+      appEventBlocker
+      (dragend)="isDragOver = false"
+      (dragover)="isDragOver = true"
+      (dragenter)="isDragOver = true"
+      (dragleave)="isDragOver = false"
+      (mouseleave)="isDragOver = false"
+      (drop)="onFileDrop($event)"
+      [ngClass]="{
+        'bg-indigo-400 border-indigo-400 border-solid': isDragOver
+      }"
       class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed border-gray-400 transition duration-500 hover:text-white hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl"
     >
       <h5>Drop your file here (mp4 only!)</h5>
     </div>
 
     <!-- Video Editor -->
-    <div>
+    <ng-template #uploadFormTpl>
       <!-- Form -->
-      <form>
+      <form [formGroup]="uploadForm" (ngSubmit)="uploadFile()">
         <!-- Screenshots -->
         <h2 class="mb-4 text-xl">Select a Thumbnail</h2>
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
@@ -30,10 +41,7 @@
         <!-- Title -->
         <div class="mt-4">
           <label class="block text-xl mb-4">Title</label>
-          <input
-            type="text"
-            class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-          />
+          <app-input [control]="title" placeHolder="Enter title"></app-input>
         </div>
 
         <div class="mt-4 text-right">
@@ -45,6 +53,6 @@
           </button>
         </div>
       </form>
-    </div>
+    </ng-template>
   </div>
 </section>
