--- a/src/app/features/video/manage/manage.component.html
+++ b/src/app/features/video/manage/manage.component.html
@@ -27,6 +27,7 @@
   <!-- Video List -->
   <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
     <div
+      *ngFor="let clip of clips$ | async"
       class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary flex flex-col justify-start"
     >
       <!-- Image -->
@@ -38,9 +39,12 @@
       </a>
 
       <!-- Body -->
+      <!-- TODO: fix weird copy link on long title -->
       <div class="p-6 text-2xl">
         <!-- Link -->
-        <a href="#" class="font-bold mb-2"> Game Highlighting Clip </a>
+        <a href="#" class="font-bold mb-2">
+          {{ clip.title }}
+        </a>
         <a
           href="#"
           class="bg-gray-400 text-white px-2 py-1 ml-2 text-sm rounded"
@@ -52,201 +56,7 @@
       <!-- Actions -->
       <div class="flex text-center text-2xl bg-gray-800 p-2 mt-auto">
         <a
-          href="#"
-          class="flex-1 p-2 border-right border-r-2 border-gray-700 transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">build</span>
-        </a>
-        <a
-          href="#"
-          class="flex-1 p-2 rounded-br-2xl transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">delete</span>
-        </a>
-      </div>
-    </div>
-    <div
-      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary flex flex-col justify-start"
-    >
-      <!-- Image -->
-      <a href="#">
-        <img
-          class="card-img-top rounded-tl-2xl w-full"
-          src="assets/img/1.jpg"
-        />
-      </a>
-
-      <!-- Body -->
-      <div class="p-6 text-2xl">
-        <!-- Link -->
-        <a href="#" class="font-bold mb-2"> Game Highlighting Clip </a>
-        <a
-          href="#"
-          class="bg-gray-400 text-white px-2 py-1 ml-2 text-sm rounded"
-        >
-          Copy Link
-        </a>
-      </div>
-
-      <!-- Actions -->
-      <div class="flex text-center text-2xl bg-gray-800 p-2 mt-auto">
-        <a
-          href="#"
-          class="flex-1 p-2 border-right border-r-2 border-gray-700 transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">build</span>
-        </a>
-        <a
-          href="#"
-          class="flex-1 p-2 rounded-br-2xl transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">delete</span>
-        </a>
-      </div>
-    </div>
-    <div
-      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary flex flex-col justify-start"
-    >
-      <!-- Image -->
-      <a href="#">
-        <img
-          class="card-img-top rounded-tl-2xl w-full"
-          src="assets/img/1.jpg"
-        />
-      </a>
-
-      <!-- Body -->
-      <div class="p-6 text-2xl">
-        <!-- Link -->
-        <a href="#" class="font-bold mb-2"> Game Highlighting Clip </a>
-        <a
-          href="#"
-          class="bg-gray-400 text-white px-2 py-1 ml-2 text-sm rounded"
-        >
-          Copy Link
-        </a>
-      </div>
-
-      <!-- Actions -->
-      <div class="flex text-center text-2xl bg-gray-800 p-2 mt-auto">
-        <a
-          href="#"
-          class="flex-1 p-2 border-right border-r-2 border-gray-700 transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">build</span>
-        </a>
-        <a
-          href="#"
-          class="flex-1 p-2 rounded-br-2xl transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">delete</span>
-        </a>
-      </div>
-    </div>
-    <div
-      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary flex flex-col justify-start"
-    >
-      <!-- Image -->
-      <a href="#">
-        <img
-          class="card-img-top rounded-tl-2xl w-full"
-          src="assets/img/1.jpg"
-        />
-      </a>
-
-      <!-- Body -->
-      <div class="p-6 text-2xl">
-        <!-- Link -->
-        <a href="#" class="font-bold mb-2"> Game Highlighting Clip </a>
-        <a
-          href="#"
-          class="bg-gray-400 text-white px-2 py-1 ml-2 text-sm rounded"
-        >
-          Copy Link
-        </a>
-      </div>
-
-      <!-- Actions -->
-      <div class="flex text-center text-2xl bg-gray-800 p-2 mt-auto">
-        <a
-          href="#"
-          class="flex-1 p-2 border-right border-r-2 border-gray-700 transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">build</span>
-        </a>
-        <a
-          href="#"
-          class="flex-1 p-2 rounded-br-2xl transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">delete</span>
-        </a>
-      </div>
-    </div>
-    <div
-      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary flex flex-col justify-start"
-    >
-      <!-- Image -->
-      <a href="#">
-        <img
-          class="card-img-top rounded-tl-2xl w-full"
-          src="assets/img/1.jpg"
-        />
-      </a>
-
-      <!-- Body -->
-      <div class="p-6 text-2xl">
-        <!-- Link -->
-        <a href="#" class="font-bold mb-2"> Game Highlighting Clip </a>
-        <a
-          href="#"
-          class="bg-gray-400 text-white px-2 py-1 ml-2 text-sm rounded"
-        >
-          Copy Link
-        </a>
-      </div>
-
-      <!-- Actions -->
-      <div class="flex text-center text-2xl bg-gray-800 p-2 mt-auto">
-        <a
-          href="#"
-          class="flex-1 p-2 border-right border-r-2 border-gray-700 transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">build</span>
-        </a>
-        <a
-          href="#"
-          class="flex-1 p-2 rounded-br-2xl transition hover:text-indigo-400"
-        >
-          <span class="material-icons text-base">delete</span>
-        </a>
-      </div>
-    </div>
-    <div
-      class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary flex flex-col justify-start"
-    >
-      <!-- Image -->
-      <a href="#">
-        <img
-          class="card-img-top rounded-tl-2xl w-full"
-          src="assets/img/1.jpg"
-        />
-      </a>
-
-      <!-- Body -->
-      <div class="p-6 text-2xl">
-        <!-- Link -->
-        <a href="#" class="font-bold mb-2"> Game Highlighting Clip </a>
-        <a
-          href="#"
-          class="bg-gray-400 text-white px-2 py-1 ml-2 text-sm rounded"
-        >
-          Copy Link
-        </a>
-      </div>
-
-      <!-- Actions -->
-      <div class="flex text-center text-2xl bg-gray-800 p-2 mt-auto">
-        <a
+          (click)="onEditLinkClick($event, clip)"
           href="#"
           class="flex-1 p-2 border-right border-r-2 border-gray-700 transition hover:text-indigo-400"
         >
@@ -264,27 +74,6 @@
 </div>
 
 <!-- Edit Modal -->
-<div class="hidden">
-  <p class="text-2xl font-bold">Edit Video</p>
-
-  <!-- Form -->
-  <form>
-    <!-- Title -->
-    <div class="mt-4">
-      <label class="block text-xl mb-4">Title</label>
-      <input
-        placeholder="Enter Title"
-        class="block w-full py-1.5 px-3 text-gray-200 border border-gray-400 transition duration-500 focus:outline-none rounded bg-transparent focus:border-indigo-400"
-      />
-    </div>
-
-    <div class="mt-4 text-right">
-      <button
-        type="submit"
-        class="inline-flex justify-center py-2 px-4 border border-transparent shadow-sm rounded-md text-white bg-indigo-600 focus:outline-none"
-      >
-        Update
-      </button>
-    </div>
-  </form>
-</div>
+<app-modal [id]="EDIT_MODAL_ID" *ngIf="activeClip$ | async; let activeClip">
+  <app-edit [clip]="activeClip" (update)="onClipUpdate($event)"></app-edit>
+</app-modal>
