--- a/src/app/features/video/manage/manage.component.html
+++ b/src/app/features/video/manage/manage.component.html
@@ -65,6 +65,7 @@
         <a
           href="#"
           class="flex-1 p-2 rounded-br-2xl transition hover:text-indigo-400"
+          (click)="onDeleteLinkClick($event, clip)"
         >
           <span class="material-icons text-base">delete</span>
         </a>
@@ -74,6 +75,9 @@
 </div>
 
 <!-- Edit Modal -->
-<app-modal [id]="EDIT_MODAL_ID" *ngIf="activeClip$ | async; let activeClip">
-  <app-edit [clip]="activeClip" (update)="onClipUpdate($event)"></app-edit>
+<app-modal [id]="EDIT_MODAL_ID">
+  <app-edit
+    [clip]="activeClip$ | async"
+    (update)="onClipUpdate($event)"
+  ></app-edit>
 </app-modal>
