--- a/src/app/features/video/upload/upload.component.html
+++ b/src/app/features/video/upload/upload.component.html
@@ -4,24 +4,32 @@
 
     <!-- File upload -->
     <ng-container *ngIf="!formEnabled; else uploadFormTpl">
-      <!-- Upload Dropbox -->
-      <div
-        appEventBlocker
-        (dragend)="isDragOver = false"
-        (dragover)="isDragOver = true"
-        (dragenter)="isDragOver = true"
-        (dragleave)="isDragOver = false"
-        (mouseleave)="isDragOver = false"
-        (drop)="onFileDrop($event)"
-        [ngClass]="{
-          'bg-indigo-400 border-indigo-400 border-solid': isDragOver
-        }"
-        class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed border-gray-400 transition duration-500 hover:text-white hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl"
+      <ng-container
+        *ngIf="
+          (ffmpegSevice.isReady$ | async) &&
+            (isProcessingVideo$ | async) !== true;
+          else loadingTpl
+        "
       >
-        <h5>Drop your file here (mp4 only!)</h5>
-      </div>
-      <!-- Upload input -->
-      <input type="file" class="mt-4" (change)="onFileSelect($event)" />
+        <!-- Upload Dropbox -->
+        <div
+          appEventBlocker
+          (dragend)="isDragOver = false"
+          (dragover)="isDragOver = true"
+          (dragenter)="isDragOver = true"
+          (dragleave)="isDragOver = false"
+          (mouseleave)="isDragOver = false"
+          (drop)="onFileDrop($event)"
+          [ngClass]="{
+            'bg-indigo-400 border-indigo-400 border-solid': isDragOver
+          }"
+          class="w-full px-10 py-40 rounded text-center cursor-pointer border border-dashed border-gray-400 transition duration-500 hover:text-white hover:bg-indigo-400 hover:border-indigo-400 hover:border-solid text-xl"
+        >
+          <h5>Drop your file here (mp4 only!)</h5>
+        </div>
+        <!-- Upload input -->
+        <input type="file" class="mt-4" (change)="onFileSelect($event)" />
+      </ng-container>
     </ng-container>
 
     <!-- Video Editor -->
@@ -40,14 +48,16 @@
         <!-- Screenshots -->
         <h2 class="mb-4 text-xl">Select a Thumbnail</h2>
         <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
-          <div class="border-8 cursor-pointer border-green-400">
-            <img src="assets/img/1.jpg" />
-          </div>
-          <div class="border-8 cursor-pointer border-transparent">
-            <img src="assets/img/2.jpg" />
-          </div>
-          <div class="border-8 cursor-pointer border-transparent">
-            <img src="assets/img/3.jpg" />
+          <div
+            *ngFor="let screenshot of screenshots$ | async"
+            class="border-8 cursor-pointer"
+            [ngClass]="{
+              'border-green-400': screenshot === (selectedScreenshot$ | async),
+              'border-transparent': screenshot !== (selectedScreenshot$ | async)
+            }"
+            (click)="selectedScreenshot$.next(screenshot)"
+          >
+            <img [src]="screenshot | safeURL" />
           </div>
         </div>
 
@@ -74,3 +84,9 @@
     </ng-template>
   </div>
 </section>
+
+<ng-template #loadingTpl>
+  <span class="material-symbols-outlined text-center text-6xl p-8 animate-spin">
+    settings
+  </span>
+</ng-template>
