feat: add cors to fb, implement clips list with fbdate pipe

--- a/src/app/features/video/manage/manage.component.html
+++ b/src/app/features/video/manage/manage.component.html
@@ -34,7 +34,8 @@
       <a href="#">
         <img
           class="card-img-top rounded-tl-2xl w-full"
-          src="assets/img/1.jpg"
+          [src]="clip.screenshotURL"
+          crossorigin
         />
       </a>
 
