--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,10 @@
-<p>home works!</p>
+<!-- Main Content -->
+<section class="container mx-auto">
+  <h1
+    class="uppercase text-center text-4xl grid mt-20 mb-12 items-center gap-8 tracking-widest latest"
+  >
+    Latest
+  </h1>
+
+  <app-clips-list></app-clips-list>
+</section>
