--- a/src/app/shared/clips-list/clips-list.component.html
+++ b/src/app/shared/clips-list/clips-list.component.html
@@ -2,7 +2,7 @@
 <div class="grid grid-cols-1 lg:grid-cols-3 gap-4">
   <a
     *ngFor="let clip of clips$ | async"
-    [routerLink]="['/', 'clip', clip.docID]"
+    [routerLink]="['/', 'clips', clip.docID]"
     class="mt-6 rounded-tl-2xl rounded-br-2xl shadow-xl bg-secondary transform hover:-translate-y-2 hover:shadow-2xl transition duration-300"
   >
     <!-- Image -->
